# Huffman-Compressor

./: .gitignore  CMakeLists.txt  README.md
HuffmanCompressorGUI/: CMakeLists.txt  dropframe.cpp  dropframe.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  styles.qss
include/: compressor.hpp  decoder.hpp  encoder.hpp  frequency.hpp  huffman_codes.hpp  huffman_tree.hpp  utils.hpp
src/: compressor.cpp  decoder.cpp  encoder.cpp  frequency.cpp  huffman_codes.cpp  huffman_tree.cpp  main.cpp  utils.cpp
